fix singles projects alignment + add/test aos library

--- a/src/scss/components/_section-a-propos.scss
+++ b/src/scss/components/_section-a-propos.scss
@@ -1,6 +1,6 @@
 /* ------------ a-propos ------------ */
 .a-propos{
-  height: 65vh;
+  height: 75vh;
   width: 100vw;
   display: grid;
   grid-template-columns: 100px 700px auto 700px 100px;
